// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProjectSavedSearches renders 1`] = `
<ProjectSavedSearches
  params={
    Object {
      "orgId": "org-slug",
      "projectId": "project-slug",
    }
  }
>
  <div>
    <SettingsPageHeading
      title="Saved Searches"
    >
      <Wrapper>
        <div
          className="css-foidy-Wrapper css-1wp86lr0"
        >
          <Flex
            align="center"
          >
            <StyledFlex
              align="center"
            >
              <div
                className="css-ud6gq6-StyledFlex css-4jd5981"
              >
                <Title>
                  <div
                    className="css-zmdcxu-Title css-1wp86lr1"
                  >
                    Saved Searches
                  </div>
                </Title>
              </div>
            </StyledFlex>
          </Flex>
        </div>
      </Wrapper>
    </SettingsPageHeading>
    <Panel>
      <StyledPanel>
        <div
          className="css-wfa8ap-StyledPanel css-5bw71w0"
        >
          <PanelHeader
            disablePadding={true}
          >
            <StyledPanelHeader
              disablePadding={true}
            >
              <Component
                className="css-18fb6u1-StyledPanelHeader css-9rpnl60"
                disablePadding={true}
              >
                <Flex
                  align="center"
                  className="css-18fb6u1-StyledPanelHeader css-9rpnl60"
                  justify="space-between"
                >
                  <StyledFlex
                    align="center"
                    className="css-18fb6u1-StyledPanelHeader css-9rpnl60"
                    justify="space-between"
                  >
                    <div
                      className="css-9rpnl60 css-qawref-StyledFlex css-4jd5981"
                    >
                      <Flex
                        flex="1"
                      >
                        <StyledFlex>
                          <div
                            className="css-1luekth-StyledFlex css-4jd5981"
                          >
                            <Flex
                              flex="1"
                              px={2}
                            >
                              <StyledFlex>
                                <div
                                  className="css-kc8q98-StyledFlex css-4jd5981"
                                >
                                  Search
                                </div>
                              </StyledFlex>
                            </Flex>
                            <Flex
                              flex="1"
                            >
                              <StyledFlex>
                                <div
                                  className="css-1luekth-StyledFlex css-4jd5981"
                                >
                                  <InputColumn>
                                    <Flex
                                      flex="1"
                                      justify="center"
                                    >
                                      <StyledFlex
                                        justify="center"
                                      >
                                        <div
                                          className="css-1luekth-StyledFlex css-4jd5981"
                                        >
                                          My Default
                                        </div>
                                      </StyledFlex>
                                    </Flex>
                                  </InputColumn>
                                  <InputColumn>
                                    <Flex
                                      flex="1"
                                      justify="center"
                                    >
                                      <StyledFlex
                                        justify="center"
                                      >
                                        <div
                                          className="css-1luekth-StyledFlex css-4jd5981"
                                        >
                                          Team Default
                                        </div>
                                      </StyledFlex>
                                    </Flex>
                                  </InputColumn>
                                  <InputColumn>
                                    <Flex
                                      flex="1"
                                      justify="center"
                                    >
                                      <StyledFlex
                                        justify="center"
                                      >
                                        <div
                                          className="css-1luekth-StyledFlex css-4jd5981"
                                        >
                                          Remove
                                        </div>
                                      </StyledFlex>
                                    </Flex>
                                  </InputColumn>
                                </div>
                              </StyledFlex>
                            </Flex>
                          </div>
                        </StyledFlex>
                      </Flex>
                    </div>
                  </StyledFlex>
                </Flex>
              </Component>
            </StyledPanelHeader>
          </PanelHeader>
          <PanelBody
            direction="column"
            disablePadding={true}
            flex={false}
          >
            <div
              className=""
            >
              <SavedSearchRow
                access={
                  Set {
                    "org:read",
                    "org:write",
                    "org:admin",
                    "project:read",
                    "project:write",
                    "project:admin",
                    "team:read",
                    "team:write",
                    "team:admin",
                  }
                }
                canModify={true}
                data={
                  Object {
                    "dateCreated": "2017-11-14T02:22:58.026Z",
                    "id": "2",
                    "isDefault": true,
                    "isPrivate": false,
                    "isUserDefault": false,
                    "name": "Needs Triage",
                    "query": "is:unresolved is:unassigned",
                  }
                }
                key="2"
                onDefault={[Function]}
                onRemove={[Function]}
                onUserDefault={[Function]}
                orgId="org-slug"
                projectId="project-slug"
              >
                <PanelItem
                  align="center"
                  p={0}
                  py={2}
                >
                  <StyledPanelItem
                    align="center"
                    p={0}
                    py={2}
                  >
                    <Flex
                      align="center"
                      className="css-g2y9ad-StyledPanelItem css-ggxnv80"
                      p={0}
                      py={2}
                    >
                      <StyledFlex
                        align="center"
                        className="css-g2y9ad-StyledPanelItem css-ggxnv80"
                      >
                        <div
                          className="css-ggxnv80 css-1pf07em-StyledFlex css-4jd5981"
                        >
                          <Flex
                            direction="column"
                            flex="1"
                            px={2}
                          >
                            <StyledFlex
                              direction="column"
                            >
                              <div
                                className="css-kc8q98-StyledFlex css-4jd5981"
                                direction="column"
                              >
                                <SearchTitle>
                                  <div
                                    className="css-225nrx-SearchTitle css-1t5zp2m0"
                                  >
                                    Needs Triage
                                  </div>
                                </SearchTitle>
                                <code>
                                  is:unresolved is:unassigned
                                </code>
                              </div>
                            </StyledFlex>
                          </Flex>
                          <Flex
                            flex="1"
                          >
                            <StyledFlex>
                              <div
                                className="css-1luekth-StyledFlex css-4jd5981"
                              >
                                <InputColumn>
                                  <Flex
                                    flex="1"
                                    justify="center"
                                  >
                                    <StyledFlex
                                      justify="center"
                                    >
                                      <div
                                        className="css-1luekth-StyledFlex css-4jd5981"
                                      >
                                        <input
                                          checked={false}
                                          name="userDefault"
                                          onChange={[Function]}
                                          type="radio"
                                        />
                                      </div>
                                    </StyledFlex>
                                  </Flex>
                                </InputColumn>
                                <InputColumn>
                                  <Flex
                                    flex="1"
                                    justify="center"
                                  >
                                    <StyledFlex
                                      justify="center"
                                    >
                                      <div
                                        className="css-1luekth-StyledFlex css-4jd5981"
                                      >
                                        <input
                                          checked={true}
                                          name="default"
                                          onChange={[Function]}
                                          type="radio"
                                        />
                                      </div>
                                    </StyledFlex>
                                  </Flex>
                                </InputColumn>
                                <InputColumn>
                                  <Flex
                                    flex="1"
                                    justify="center"
                                  >
                                    <StyledFlex
                                      justify="center"
                                    >
                                      <div
                                        className="css-1luekth-StyledFlex css-4jd5981"
                                      >
                                        <Confirm
                                          cancelText="Cancel"
                                          confirmText="Confirm"
                                          message="Are you sure you want to remove this?"
                                          onConfirm={[Function]}
                                          priority="primary"
                                        >
                                          <Button
                                            disabled={false}
                                            onClick={[Function]}
                                            size="small"
                                          >
                                            <button
                                              className="button button-default button-sm"
                                              disabled={false}
                                              onClick={[Function]}
                                              role="button"
                                            >
                                              <Flex
                                                align="center"
                                                className="button-label"
                                              >
                                                <StyledFlex
                                                  align="center"
                                                  className="button-label"
                                                >
                                                  <div
                                                    className="button-label css-ud6gq6-StyledFlex css-4jd5981"
                                                  >
                                                    <span
                                                      className="icon icon-trash"
                                                    />
                                                  </div>
                                                </StyledFlex>
                                              </Flex>
                                            </button>
                                          </Button>
                                          <Modal
                                            animation={false}
                                            autoFocus={true}
                                            backdrop={true}
                                            bsClass="modal"
                                            dialogComponentClass={[Function]}
                                            enforceFocus={true}
                                            keyboard={true}
                                            manager={
                                              ModalManager {
                                                "add": [Function],
                                                "containers": Array [],
                                                "data": Array [],
                                                "handleContainerOverflow": true,
                                                "hideSiblingNodes": true,
                                                "isTopModal": [Function],
                                                "modals": Array [],
                                                "remove": [Function],
                                              }
                                            }
                                            onHide={[Function]}
                                            renderBackdrop={[Function]}
                                            restoreFocus={true}
                                            show={false}
                                          >
                                            <Modal
                                              autoFocus={true}
                                              backdrop={true}
                                              backdropClassName="modal-backdrop"
                                              containerClassName="modal-open"
                                              enforceFocus={true}
                                              keyboard={true}
                                              manager={
                                                ModalManager {
                                                  "add": [Function],
                                                  "containers": Array [],
                                                  "data": Array [],
                                                  "handleContainerOverflow": true,
                                                  "hideSiblingNodes": true,
                                                  "isTopModal": [Function],
                                                  "modals": Array [],
                                                  "remove": [Function],
                                                }
                                              }
                                              onEntering={[Function]}
                                              onExited={[Function]}
                                              onHide={[Function]}
                                              renderBackdrop={[Function]}
                                              restoreFocus={true}
                                              show={false}
                                            />
                                          </Modal>
                                        </Confirm>
                                      </div>
                                    </StyledFlex>
                                  </Flex>
                                </InputColumn>
                              </div>
                            </StyledFlex>
                          </Flex>
                        </div>
                      </StyledFlex>
                    </Flex>
                  </StyledPanelItem>
                </PanelItem>
              </SavedSearchRow>
              <SavedSearchRow
                access={
                  Set {
                    "org:read",
                    "org:write",
                    "org:admin",
                    "project:read",
                    "project:write",
                    "project:admin",
                    "team:read",
                    "team:write",
                    "team:admin",
                  }
                }
                canModify={true}
                data={
                  Object {
                    "dateCreated": "2017-11-14T02:22:58.022Z",
                    "id": "1",
                    "isDefault": false,
                    "isPrivate": false,
                    "isUserDefault": true,
                    "name": "Unresolved Issues",
                    "query": "is:unresolved",
                  }
                }
                key="1"
                onDefault={[Function]}
                onRemove={[Function]}
                onUserDefault={[Function]}
                orgId="org-slug"
                projectId="project-slug"
              >
                <PanelItem
                  align="center"
                  p={0}
                  py={2}
                >
                  <StyledPanelItem
                    align="center"
                    p={0}
                    py={2}
                  >
                    <Flex
                      align="center"
                      className="css-g2y9ad-StyledPanelItem css-ggxnv80"
                      p={0}
                      py={2}
                    >
                      <StyledFlex
                        align="center"
                        className="css-g2y9ad-StyledPanelItem css-ggxnv80"
                      >
                        <div
                          className="css-ggxnv80 css-1pf07em-StyledFlex css-4jd5981"
                        >
                          <Flex
                            direction="column"
                            flex="1"
                            px={2}
                          >
                            <StyledFlex
                              direction="column"
                            >
                              <div
                                className="css-kc8q98-StyledFlex css-4jd5981"
                                direction="column"
                              >
                                <SearchTitle>
                                  <div
                                    className="css-225nrx-SearchTitle css-1t5zp2m0"
                                  >
                                    Unresolved Issues
                                  </div>
                                </SearchTitle>
                                <code>
                                  is:unresolved
                                </code>
                              </div>
                            </StyledFlex>
                          </Flex>
                          <Flex
                            flex="1"
                          >
                            <StyledFlex>
                              <div
                                className="css-1luekth-StyledFlex css-4jd5981"
                              >
                                <InputColumn>
                                  <Flex
                                    flex="1"
                                    justify="center"
                                  >
                                    <StyledFlex
                                      justify="center"
                                    >
                                      <div
                                        className="css-1luekth-StyledFlex css-4jd5981"
                                      >
                                        <input
                                          checked={true}
                                          name="userDefault"
                                          onChange={[Function]}
                                          type="radio"
                                        />
                                      </div>
                                    </StyledFlex>
                                  </Flex>
                                </InputColumn>
                                <InputColumn>
                                  <Flex
                                    flex="1"
                                    justify="center"
                                  >
                                    <StyledFlex
                                      justify="center"
                                    >
                                      <div
                                        className="css-1luekth-StyledFlex css-4jd5981"
                                      >
                                        <input
                                          checked={false}
                                          name="default"
                                          onChange={[Function]}
                                          type="radio"
                                        />
                                      </div>
                                    </StyledFlex>
                                  </Flex>
                                </InputColumn>
                                <InputColumn>
                                  <Flex
                                    flex="1"
                                    justify="center"
                                  >
                                    <StyledFlex
                                      justify="center"
                                    >
                                      <div
                                        className="css-1luekth-StyledFlex css-4jd5981"
                                      >
                                        <Confirm
                                          cancelText="Cancel"
                                          confirmText="Confirm"
                                          message="Are you sure you want to remove this?"
                                          onConfirm={[Function]}
                                          priority="primary"
                                        >
                                          <Button
                                            disabled={false}
                                            onClick={[Function]}
                                            size="small"
                                          >
                                            <button
                                              className="button button-default button-sm"
                                              disabled={false}
                                              onClick={[Function]}
                                              role="button"
                                            >
                                              <Flex
                                                align="center"
                                                className="button-label"
                                              >
                                                <StyledFlex
                                                  align="center"
                                                  className="button-label"
                                                >
                                                  <div
                                                    className="button-label css-ud6gq6-StyledFlex css-4jd5981"
                                                  >
                                                    <span
                                                      className="icon icon-trash"
                                                    />
                                                  </div>
                                                </StyledFlex>
                                              </Flex>
                                            </button>
                                          </Button>
                                          <Modal
                                            animation={false}
                                            autoFocus={true}
                                            backdrop={true}
                                            bsClass="modal"
                                            dialogComponentClass={[Function]}
                                            enforceFocus={true}
                                            keyboard={true}
                                            manager={
                                              ModalManager {
                                                "add": [Function],
                                                "containers": Array [],
                                                "data": Array [],
                                                "handleContainerOverflow": true,
                                                "hideSiblingNodes": true,
                                                "isTopModal": [Function],
                                                "modals": Array [],
                                                "remove": [Function],
                                              }
                                            }
                                            onHide={[Function]}
                                            renderBackdrop={[Function]}
                                            restoreFocus={true}
                                            show={false}
                                          >
                                            <Modal
                                              autoFocus={true}
                                              backdrop={true}
                                              backdropClassName="modal-backdrop"
                                              containerClassName="modal-open"
                                              enforceFocus={true}
                                              keyboard={true}
                                              manager={
                                                ModalManager {
                                                  "add": [Function],
                                                  "containers": Array [],
                                                  "data": Array [],
                                                  "handleContainerOverflow": true,
                                                  "hideSiblingNodes": true,
                                                  "isTopModal": [Function],
                                                  "modals": Array [],
                                                  "remove": [Function],
                                                }
                                              }
                                              onEntering={[Function]}
                                              onExited={[Function]}
                                              onHide={[Function]}
                                              renderBackdrop={[Function]}
                                              restoreFocus={true}
                                              show={false}
                                            />
                                          </Modal>
                                        </Confirm>
                                      </div>
                                    </StyledFlex>
                                  </Flex>
                                </InputColumn>
                              </div>
                            </StyledFlex>
                          </Flex>
                        </div>
                      </StyledFlex>
                    </Flex>
                  </StyledPanelItem>
                </PanelItem>
              </SavedSearchRow>
            </div>
          </PanelBody>
        </div>
      </StyledPanel>
    </Panel>
  </div>
</ProjectSavedSearches>
`;

exports[`ProjectSavedSearches renders empty 1`] = `
<ProjectSavedSearches
  params={
    Object {
      "orgId": "org-slug",
      "projectId": "project-slug",
    }
  }
>
  <div>
    <SettingsPageHeading
      title="Saved Searches"
    >
      <Wrapper>
        <div
          className="css-foidy-Wrapper css-1wp86lr0"
        >
          <Flex
            align="center"
          >
            <StyledFlex
              align="center"
            >
              <div
                className="css-ud6gq6-StyledFlex css-4jd5981"
              >
                <Title>
                  <div
                    className="css-zmdcxu-Title css-1wp86lr1"
                  >
                    Saved Searches
                  </div>
                </Title>
              </div>
            </StyledFlex>
          </Flex>
        </div>
      </Wrapper>
    </SettingsPageHeading>
    <Panel>
      <StyledPanel>
        <div
          className="css-wfa8ap-StyledPanel css-5bw71w0"
        >
          <PanelHeader
            disablePadding={true}
          >
            <StyledPanelHeader
              disablePadding={true}
            >
              <Component
                className="css-18fb6u1-StyledPanelHeader css-9rpnl60"
                disablePadding={true}
              >
                <Flex
                  align="center"
                  className="css-18fb6u1-StyledPanelHeader css-9rpnl60"
                  justify="space-between"
                >
                  <StyledFlex
                    align="center"
                    className="css-18fb6u1-StyledPanelHeader css-9rpnl60"
                    justify="space-between"
                  >
                    <div
                      className="css-9rpnl60 css-qawref-StyledFlex css-4jd5981"
                    >
                      <Flex
                        flex="1"
                      >
                        <StyledFlex>
                          <div
                            className="css-1luekth-StyledFlex css-4jd5981"
                          >
                            <Flex
                              flex="1"
                              px={2}
                            >
                              <StyledFlex>
                                <div
                                  className="css-kc8q98-StyledFlex css-4jd5981"
                                >
                                  Search
                                </div>
                              </StyledFlex>
                            </Flex>
                            <Flex
                              flex="1"
                            >
                              <StyledFlex>
                                <div
                                  className="css-1luekth-StyledFlex css-4jd5981"
                                >
                                  <InputColumn>
                                    <Flex
                                      flex="1"
                                      justify="center"
                                    >
                                      <StyledFlex
                                        justify="center"
                                      >
                                        <div
                                          className="css-1luekth-StyledFlex css-4jd5981"
                                        >
                                          My Default
                                        </div>
                                      </StyledFlex>
                                    </Flex>
                                  </InputColumn>
                                  <InputColumn>
                                    <Flex
                                      flex="1"
                                      justify="center"
                                    >
                                      <StyledFlex
                                        justify="center"
                                      >
                                        <div
                                          className="css-1luekth-StyledFlex css-4jd5981"
                                        >
                                          Team Default
                                        </div>
                                      </StyledFlex>
                                    </Flex>
                                  </InputColumn>
                                  <InputColumn>
                                    <Flex
                                      flex="1"
                                      justify="center"
                                    >
                                      <StyledFlex
                                        justify="center"
                                      >
                                        <div
                                          className="css-1luekth-StyledFlex css-4jd5981"
                                        >
                                          Remove
                                        </div>
                                      </StyledFlex>
                                    </Flex>
                                  </InputColumn>
                                </div>
                              </StyledFlex>
                            </Flex>
                          </div>
                        </StyledFlex>
                      </Flex>
                    </div>
                  </StyledFlex>
                </Flex>
              </Component>
            </StyledPanelHeader>
          </PanelHeader>
          <PanelBody
            direction="column"
            disablePadding={true}
            flex={false}
          >
            <div
              className=""
            >
              <EmptyStateWarning>
                <EmptyStreamWrapper
                  className="ref-empty-state"
                >
                  <div
                    className="ref-empty-state css-n38n5f-EmptyStreamWrapper css-tkh7440"
                  >
                    <Icon
                      className="icon icon-exclamation"
                    >
                      <div
                        className="icon icon-exclamation css-1xqhcr3-Icon css-tkh7441"
                      />
                    </Icon>
                    <p>
                      There are no saved searches for this project.
                    </p>
                  </div>
                </EmptyStreamWrapper>
              </EmptyStateWarning>
            </div>
          </PanelBody>
        </div>
      </StyledPanel>
    </Panel>
  </div>
</ProjectSavedSearches>
`;
